-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
I hit this assertion in racer infrequently:
[ 283.409542] LustreError: 12528:0:(lod_lov.c:461:lod_ea_store_resize()) ASSERTION( info->lti_ea_store_size < round ) failed: [ 283.409804] LustreError: 12528:0:(lod_lov.c:461:lod_ea_store_resize()) LBUG [ 283.409952] Pid: 12528, comm: mdt00_047 4.18.0 #2 SMP Sun Oct 23 17:58:04 UTC 2022 [ 283.410083] Call Trace TBD: [ 283.410146] [<0>] libcfs_call_trace+0x67/0x90 [libcfs] [ 283.410232] [<0>] lbug_with_loc+0x3e/0x80 [libcfs] [ 283.410325] [<0>] lod_ea_store_resize+0x475/0x5a0 [lod] [ 283.410410] [<0>] lod_get_ea+0x34b/0x550 [lod] [ 283.410495] [<0>] lod_get_default_lov_striping+0xdc/0x8f0 [lod] [ 283.410596] [<0>] lod_ah_init+0x520/0x14f0 [lod] [ 283.410686] [<0>] mdd_create+0x639/0x25a0 [mdd]
I tend to think this is due to LOVEA getting "shorter" in another process.